force-app/bedrock/lib/event/objects/Event_Config__mdt/Event_Config__mdt.object-meta.xml
<CustomObject>
    <description>Bedrock EventRelay route configuration.</description>
    <label>Event Config</label>
    <pluralLabel>Event Configs</pluralLabel>
</CustomObject>