force-app/bedrock/lib/event/objects/Event_Config__mdt/fields/Idempotency_Key_Path__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key_Path__c</fullName>
    <label>Idempotency Key Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>