force-app/bedrock/lib/event/objects/Event_Config__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <label>Max Retries</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>