force-app/bedrock/lib/event/objects/Event_Config__mdt/fields/Routing_Key__c.field-meta.xml
<CustomField>
    <fullName>Routing_Key__c</fullName>
    <label>Routing Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>