force-app/bedrock/lib/event/objects/Event_Config__mdt/fields/Routing_Value__c.field-meta.xml
<CustomField>
    <fullName>Routing_Value__c</fullName>
    <label>Routing Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>